ncc/testsuite/positive/operator().n
using System.Console;

namespace X.Y
{
  class A
  {
    public static @()(_a : A, x: int) : void
    {
      WriteLine("A.@({0} : int)", x);
    }
 
    public static @()(_a : A, x: string) : void
    {
      WriteLine("A.@({0} : string)", x);
    }
  }

  class B[T]
  {
    public class C[TT]
    {
      public static @()(_c : C[TT], x : T) : void
      {
        WriteLine("B.@({0} : {1})", x, typeof(T).ToString());
      }
    }
  }
}

namespace Test
{
  module Program
  {
    Main() : void
    { 
      def a = X.Y.A();
      // Call directly
      X.Y.A.@()(a, 1);

      // using @()
      a(1);
      a("x");

      // Generic, nested class
      def bc = X.Y.B.[System.String].C.[double]();
      bc("e");
    }
  }
}

/*
BEGIN-OUTPUT
A.@()(1 : int)
A.@()(1 : int)
A.@()(x : string)
B.@()(e : System.String)
END-OUTPUT
*/
